crates/strider-analyze/tests/snapshots/v2__x86__calling_convention__mixed_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4011f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "8" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "10" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "5" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "16" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "6" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="arg[2] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "5" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "6" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "19" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x4014e8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x402610:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x40260c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x402610:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x40260c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "41" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "44" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="init\nEBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "47" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="init\nEBP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
